--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,36 @@ grade app
      </nav>
     </div>
 
+    <!--projects-->
+    <div class="title text-center">
+    <h1>Past and Current Projects</h1>
+    </div>
+    <!--Stock Market Scraper API-->
+    <div class="container text-center mt-5">
+        <div class="row">
+        <div class="col-sm-6">
+            <h2>Stock Market Scraper API</h2>
+        </div>
+        <div class="col-sm-6 ">
+            <!--stock photo-->
+            <h2>temp holder for photo</h2>
+        </div>
+        </div>
 
+    </div>
+
+    <div class="container text-center mt-5">
+        <div class="row">
+        <div class="col-sm-6">
+            <h2>Stock Market Scraper API</h2>
+        </div>
+        <div class="col-sm-6 ">
+            <!--stock photo-->
+            <h2>temp holder for photo</h2>
+        </div>
+        </div>
+
+    </div>
         
 
 </body>
